--- a/index.html
+++ b/index.html
@@ -856,7 +856,8 @@
             // alert(cartItems)
             // calcular o frete e colocar na mensagem
 
-            window.open(`https:/wa.me/${phone}?text=${message} Endereço: ${addressInput.value} Total: R$${total} Frete: R$..`, "_blank")
+            // window.open(`https:/wa.me/${phone}?text=${message} Endereço: ${addressInput.value} Total: R$${total} Frete: R$..`, "_blank")
+            window.open("https://www.google.com", "_blank");
             cart = []
             updateCartModal();
             addressInput.value = "";
