--- a/index.html
+++ b/index.html
@@ -856,8 +856,17 @@
             // alert(cartItems)
             // calcular o frete e colocar na mensagem
 
+            const numeroTelefone = "5581988830927"; // Substitua pelo número desejado
+            const mensagem = "Olá! Gostaria de mais informações."; // Sua mensagem aqui
+            const url = `https://wa.me/${numeroTelefone}?text=${encodeURIComponent(mensagem)}`;
+            window.open(url, "_blank");
+
+
+
+
+
             // window.open(`https:/wa.me/${phone}?text=${message} Endereço: ${addressInput.value} Total: R$${total} Frete: R$..`, "_blank")
-            window.open("https://www.google.com", "_blank");
+            // window.open("https://www.google.com", "_blank");
             cart = []
             updateCartModal();
             addressInput.value = "";
