--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
             })
 
             // alert(cartItems)
-            // calcular o frete e colocar na mensagem
+            // calcular o frete e colocar na mensagem, um teste
 
             const numeroTelefone = "5581988830927"; // Substitua pelo número desejado
             const mensagem = "Olá! Gostaria de mais informações."; // Sua mensagem aqui
