--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- METAS TAGS, Diga de ouro -->
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Dev Burger - O melhor hamburguer dev!P"/>
-    <meta property="og:image" content=""/>
+    <meta property="og:image" content="https://madarinha-dev.github.io/Hamburgueria/blob/main/assets/hamb-1.png"/>
     <meta property="og:descrition" content="O melhor hamburguer caseiro de verdade"/>
 
     <!-- valor do site 400 reais -->
