--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             }
         }
 
-        /* @media (max-width: 100px) {} estilos para telas menores que 100px */
+        /* @media (max-width: 100px) {} estilos para telas menores que 100px  teste*/
 
         img.produto{
             width: 100px;
