--- a/index.html
+++ b/index.html
@@ -882,8 +882,8 @@ ${cartItems}
 Total: ${p.toFixed(2)}`
 
             const url = `https://wa.me/${n}?text=${encodeURIComponent(m)}`;
-            // window.open(url, "_blank")
-            alert(m)
+            window.open(url, "_blank")
+            // alert(m)
             let total = 0
             // calcular o frete e colocar na mensagem, um teste
             cart = []
