--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
             <!-- Pro de Rildo a gente também vai precisar pegar o endereço e calcular a distância e calcular o frete e jogar no valor total -->
 
             <p style="font-weight: 900; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Endereço de Entrega: </p>
-            <input id="caixa" style="width: 340px; padding: 3px; border-radius: 4px; margin-bottom:10px;" type="tel" name="address" id="address" placeholder="Digite o seu Endereço Completo">
+            <input id="caixa" style="width: 340px; padding: 3px; border-radius: 4px; margin-bottom:10px;" type="text" name="address" id="address" placeholder="Digite o seu Endereço Completo">
 
             <p id="address-warn"  style="margin-top: 2px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             color: rgb(221, 5, 5);
@@ -758,7 +758,7 @@
                 <div style="display: flex; justify-content: space-between; style="margin-bottom: -20px;">
 
                     <div style="width: 230px;">
-                        <p style="font-weight: 1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Nome: ${item.name}</p>
+                        <p>Nome: ${item.name}</p>
                         <p style="margin-top: -10px;">Qtd: ${item.quantity}</p>
                         <p style="margin-top: -10px;">R$: ${item.price}</p>
                     </div>
