--- a/index.html
+++ b/index.html
@@ -755,20 +755,25 @@
                 cartItemElement.classList.add("flex", "justify-between", "flex-col", "mb-4")
 
                 cartItemElement.innerHTML = `
-                <div style="display: flex; justify-content: space-between; style="margin-bottom: -20px;">
+                <div style="background-color: blueviole; display: flex; justify-content: space-between;">
 
-                    <div style="width: 230px;">
-                        <p>Nome: ${item.name}</p>
-                        <p style="margin-top: -10px;">Qtd: ${item.quantity}</p>
-                        <p style="margin-top: -10px;">R$: ${item.price}</p>
+                    <div style="background-color: re; width: 230px;">
+                        <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Nome: Hamburguer monstro</p>
+                        <p style="margin-top: -10px;">Qtd: 5</p>
+                        <p style="margin-top: -10px;">R$: 35,30</p>
                     </div>
 
-                    <div style="width: 75px; padding-top: 40px;">
-                        <button class="remove-from-cart-btn" data-name="${item.name}" style="border: none; background-color: rgba(255, 255, 255, 0); font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 15px;">
+                    <div style="background-color: greenyello; width: 75px; padding-top: 40px;">
+                        <button style="color: white;
+                            border-radius: 10px;
+                            padding: 7px;border: none;
+                            background-color: #E62E2E;
+                            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                            font-size: 15px;
+                            box-shadow: 3px 3px 6px rgb(0, 0, 0, 0.5);">
                             Remover
                         </button>
                     </div>
-
                 </div>
                 `
                 // Junto do total, fazer o calculo de frete (usando a API do google)
