--- a/index.html
+++ b/index.html
@@ -1045,8 +1045,8 @@ Frete: R$x
 
 Pedido: 
 ${cartItems}
-Observação: ${obs.value}
-Total: R$${p.toFixed(2)}`
+Total: R$${p.toFixed(2)}
+Observação: ${obs.value}`
 
             const url = `https://wa.me/${n}?text=${encodeURIComponent(m)}`;
             window.open(url, "_blank")
