--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
         padding-right: 10px;">
 
             <div style="background-color: re; display: fle;">
-                <img style="width: 340px; border-radius: 50px;" src="assets/" alt="">
+                <img style="width: 340px; border-radius: 50px;" src="assets/Logo top.jpeg" alt="">
             </div>
 
             <div style="justify-content: center; display: flex; background-color: gree;">
@@ -883,12 +883,12 @@
 
             <div style="display: flex; justify-content: center; background-color: re; margin-top: -30px;">
                 <p style="font-weight: 900; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                color:#33BBAD; font-size: 20px;" id="valor">R$249,90</p>
+                color:#33BBAD; font-size: 20px;" id="valor">R$</p>
             </div>
 
             <div>
                 <div style="display: flex; justify-content: center;">
-                    <img style="width: 250px;" src="/QRCODE.jpeg" alt="">
+                    <img style="width: 250px;" src="/assets/codigo.jpeg" alt="">
                 </div>
 
                 <div>
@@ -911,7 +911,7 @@
                     font-size: 15px;
                     box-shadow: 3px 3px 6px rgb(0, 0, 0, 0.38);
                     width: 200px;
-                    margin-bottom: 10px;" onclick="">
+                    margin-bottom: 10px;" id="fechar_fundo = document">
                         Finalizar
                     </button>
                 </div>
@@ -942,6 +942,9 @@
         const cliente = document.getElementById('cliente')
         const obs = document.getElementById('obs')
         const forma_de_pagamento = document.getElementById('forma-de-pagamento')
+        const fundo = document.getElementById('fund')
+        const fechar_fundo = document.getElementById('fechar_fundo = document')
+        const valor = document.getElementById('valor')
         // alert(forma_de_pagamento.value)
 
         let total = 0;
@@ -1159,8 +1162,18 @@ Chave: 16811949457 (Fhellype Vinicius)
 Observação: ${obs.value}`
 // penso em gerar uma imagem com o QR 
                 const n = "5581988830927"
-                const url = `https://wa.me/${n}?text=${encodeURIComponent(m)}`;
+                fundo.style.display = "flex"
+                valor.innerText = `R$${p.toFixed(2)}`
+
+                fechar_fundo.addEventListener('click', i => {
+                    alert('Para comfirmar envie o comprovante')
+                    fundo.style.display = "none"
+                    const url = `https://wa.me/${n}?text=${encodeURIComponent(m)}`;
+                    window.open(url, "_blank")
+                })
+                // const url = `https://wa.me/${n}?text=${encodeURIComponent(m)}`;
                 // window.open(url, "_blank")
+
                 let total = 0
                 cart = []
                 updateCartModal();
