--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
         <div id="pagamento" 
         style="
         background-color: white;
-        border-radius: 50px;
+        border-radius: 20px;
         width: 340px;
         padding-bottom: 10px;
         padding-top:10px;
@@ -888,13 +888,13 @@
 
             <div>
                 <div style="display: flex; justify-content: center;">
-                    <img style="width: 250px;" src="/assets/codigo.jpeg" alt="">
+                    <img style="width: 180px;" src="/assets/codigo.jpeg" alt="">
                 </div>
 
                 <div>
-                    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 500;">
+                    <p style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">
                         Copie e Cole: <br>
-                        Chave 01 Pix: fhellypeviniciusdepaula96@gmail.com
+                        Chave 01 Pix: fhellypeviniciusdepaula96@gmail.com <br>
                         Chave 02 Pix: 168.119.494-57 <br>
                         Nome: Fhellype Vinicius de Paula
                     </p>
