--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
 
             <div>
                 <div style="display: flex; justify-content: center;">
-                    <img style="width: 180px;" src="/assets/codigo.jpeg" alt="">
+                    <img style="width: 180px;" src="/assets/hamb-1.png" alt="">
                 </div>
 
                 <div>
