--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- METAS TAGS, Diga de ouro -->
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Dev Burger - O melhor hamburguer dev!P"/>
-    <meta property="og:image" content="https://madarinha-dev.github.io/Hamburgueria/blob/main/assets/hamb-1.png"/>
+    <meta property="og:image" content="https://Hamburgueria/assets/hamb-1.png"/>
     <meta property="og:descrition" content="O melhor hamburguer caseiro de verdade"/>
 
     <!-- valor do site 400 reais -->
@@ -772,7 +772,7 @@
 
             <select 
             style="
-            border-radius: 10px;
+            border-radius: 4px;
             padding: 2px;
             background-color: #E62E2E;
             color: white;
@@ -888,7 +888,7 @@
 
             <div>
                 <div style="display: flex; justify-content: center;">
-                    <img style="width: 180px; background-color: green;" src="/assets/codigo.jpeg" alt="QR code, não carregou">
+                    <img style="width: 180px; background-color: gree;" src="/assets/codigo.jpeg" alt="QR code, não carregou, use as chaves disponíveis em baixo">
                 </div>
 
                 <div>
@@ -1087,7 +1087,7 @@
             if(addressInput.value === "" || forma_de_pagamento.value === "vazio"){
                 addressWarn.style.display = "flex";
                 addressInput.style.borderColor = "red"
-                alert(`Forma de Pagamento e endereço`)
+                alert(`Forma de Pagamento ou Endereço incompletos.`)
             }else{
                 addressWarn.style.display = "none";
                 addressInput.style.borderColor = "black";
