--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- METAS TAGS, Diga de ouro -->
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Dev Burger - O melhor hamburguer dev!P"/>
     <meta property="og:image" content="https://Hamburgueria/assets/hamb-1.png"/>
     <meta property="og:descrition" content="O melhor hamburguer caseiro de verdade"/>
+    <link rel="shortcut icon" href="assets/hamb-1.png" type="image/x-icon">
 
     <!-- valor do site 400 reais -->
 <!-- Quadro de anotações -->
